# HACKATHON-TODO-APP

./: .gitignore  CLAUDE.md  HUGGINGFACE_DEPLOYMENT.md  README.md  package-lock.json  phase3-guide.md  vercel.json
.claude/: settings.local.json
.claude/agents/: backend_engineer_agent.md  database_engineer_agent.md  frontend_engineer_agent.md  fullstack_integrator_agent.md  qa_tester_agent.md
.claude/skills/animation-composer/: SKILL.md
.claude/skills/api-bridge-builder/: SKILL.md
.claude/skills/env-synchronizer/: SKILL.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
phase1/: README.md  TROUBLESHOOTING.md
phase1/src/: __init__.py  colors.py  main.py  task_manager.py
phase2/: README.md
phase2/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_HUGGINGFACE.md  alembic.ini  pyproject.toml  requirements.txt  todo_app.db
phase2/backend/alembic/: env.py
phase2/backend/alembic/versions/: 003_add_collaboration_tables.py  004_add_projects_and_preferences.py
phase2/backend/src/: config.py  database.py  main.py
phase2/backend/src/api/: __init__.py  auth.py  comments.py  preferences.py  projects.py  tasks.py
phase2/backend/src/models/: __init__.py  activity.py  comment.py  task.py  task_share.py  user_preferences.py
phase2/backend/src/schemas/: __init__.py  activity.py  comment.py  project.py  task.py  task_share.py  user_preferences.py
phase2/backend/src/services/: __init__.py  auth.py  email_service.py  preferences.py  project.py  share.py  task.py
phase2/backend/src/templates/email/: digest.html  overdue.html
phase2/backend/tests/: conftest.py  test_tasks.py
phase2/frontend/: .env.example  README.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts
phase3/backend/: .dockerignore  .env.example  Dockerfile  README.md  README_HUGGINGFACE.md  pyproject.toml  requirements.txt
phase3/backend/src/: auth.py  chatkit_server.py  config.py  db.py  errors.py  main.py  middleware.py
phase3/backend/src/api/: __init__.py  chat.py
phase3/backend/src/mcp/: __init__.py
phase3/backend/src/mcp/tools/: __init__.py  add_comment.py  add_task.py  assign_task.py  complete_task.py  delete_task.py  get_analytics.py  get_suggestions.py  list_tasks.py  share_task.py  update_task.py
phase3/backend/src/models/: __init__.py
phase3/backend/src/services/: __init__.py  auto_categorizer.py
phase3/backend/src/utils/: date_parser.py
phase3/backend/tests/: test_backend.py  test_mcp_tools.py  test_stateless_arch.py  test_verification_protocol.py
phase4/: DOCKER_BUILD_SUMMARY.md  README.md  RUNNING_CONTAINERS.md
phase4/backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
phase4/frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  next.config.ts
phase4/todo-app/: Chart.yaml  DEPLOYMENT_GUIDE.md  QUICK_START.md  values.yaml
specs/001-ai-agent-enhancements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/phase1-console/: plan.md  spec.md  tasks.md
specs/phase2-full-stack/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/phase3/: data-model.md  quickstart.md  research.md
src/phase1/: README.md  cli.py  models.py
(+252 files in other folders)
